--- a/.gitignore
+++ b/.gitignore
@@ -94,8 +94,7 @@ Thumbs.db
 # Uncomment the above lines if you don't want to include annotation files
 
 # Video and annotation data
-Videos and Annotations/
-Videos_and_Annotations/
+# Videos and Annotations/
 
 # Documentation
 *.pdf
